<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Esbic</string>
    <string name="message_main">消息</string>
    <string name="call_record_main">通话记录</string>
    <string name="alarm_record_main">报警记录</string>
    <string name="voice_main">声音</string>
    <string name="screen_brightness_main">屏幕亮度</string>
    <string name="wifi_setting_main">Wifi</string>
    <string name="leave_home_main">离家</string>
    <string name="call_management_center_main">呼叫管理中心</string>
    <string name="monitor_main">监视</string>
    <string name="call_main">拨打电话</string>
    <string name="main_interface_main">主界面</string>
    <string name="smart_home_main">智能家居</string>
    <string name="setting_main">设置</string>
    <string name="hang_up_main">挂断</string>
    <string name="call_back_main">回拨</string>
    <string name="re_scan_wifi_main">重新扫描Wifi</string>
    <string name="cancel_main">取消</string>
    <string name="connect_main">连接</string>
    <string name="go_home">回家</string>
    <string name="parlor">会客</string>
    <string name="energy_saving">节能</string>
    <string name="sleep">睡觉</string>
    <string name="see_movie">看电影</string>
    <string name="get_up">起床</string>
    <string name="party">Party</string>
    <string name="message_contents">    亲爱的用户您好:2015年已经过去，我们迎来了2016年，谢谢您在2015年里对我们物业工作的大力支持，
        我们也将努力提高我们的服务效率和质量。2016年的物业费已经开始收取，请您在1月30日前缴纳2016年的物业费，谢谢您的支持，
        有了您的支持我们物业才能更好的为小区的业主们服务。</string>
</resources>