<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/width150"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/setting_message"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/width90"
            android:layout_width="@dimen/width150"
            android:layout_height="@dimen/width80"
            android:textSize="@dimen/textsize26"
            android:text="@string/message_main"/>
        <Button
            android:id="@+id/setting_call_record"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/width40"
            android:layout_width="@dimen/width150"
            android:layout_height="@dimen/width80"
            android:textSize="@dimen/textsize26"
            android:text="@string/call_record_main"/>
        <Button
            android:id="@+id/setting_alarm_record"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/width40"
            android:layout_width="@dimen/width150"
            android:layout_height="@dimen/width80"
            android:textSize="@dimen/textsize26"
            android:text="@string/alarm_record_main"/>
        <Button
            android:id="@+id/setting_volume"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/width40"
            android:layout_width="@dimen/width150"
            android:layout_height="@dimen/width80"
            android:textSize="@dimen/textsize26"
            android:text="@string/voice_main"/>
        <Button
            android:id="@+id/setting_screen_brightness"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/width40"
            android:layout_width="@dimen/width150"
            android:layout_height="@dimen/width80"
            android:textSize="@dimen/textsize26"
            android:text="@string/screen_brightness_main"/>
        <Button
            android:id="@+id/setting_wifi"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/width40"
            android:layout_width="@dimen/width150"
            android:layout_height="@dimen/width80"
            android:textSize="@dimen/textsize26"
            android:text="@string/wifi_setting_main"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/width400"
        android:orientation="vertical">
       <android.support.v4.view.ViewPager
           android:id="@+id/view_pager"
           android:layout_gravity="center"
           android:layout_width="@dimen/width1100"
           android:layout_height="@dimen/width400">
       </android.support.v4.view.ViewPager>

    </LinearLayout>
    <LinearLayout
        android:layout_width="@dimen/width400"
        android:layout_height="@dimen/width70"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
        android:id="@+id/button_one"
        android:layout_width="@dimen/width50"
        android:layout_height="@dimen/width50"

        android:background="@drawable/small_circle"/>
        <Button
            android:id="@+id/button_two"
            android:layout_width="@dimen/width50"
            android:layout_height="@dimen/width50"
            android:background="@drawable/small_circle"/>
        <Button
            android:id="@+id/button_three"
            android:layout_width="@dimen/width50"
            android:layout_height="@dimen/width50"
            android:background="@drawable/small_circle"/>




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/width125"
        android:orientation="horizontal">
        <Button
            android:id="@+id/setting_main_activity"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/width200"
            android:layout_width="@dimen/width200"
            android:layout_height="@dimen/width100"
            android:textSize="@dimen/textsize30"
            android:text="@string/main_interface_main"/>
        <Button
            android:id="@+id/setting_smart_home"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/width150"
            android:layout_width="@dimen/width200"
            android:layout_height="@dimen/width100"
            android:textSize="@dimen/textsize30"
            android:text="@string/smart_home_main"/>
        <Button
            android:id="@+id/setting_set"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/width150"
            android:layout_width="@dimen/width200"
            android:layout_height="@dimen/width100"
            android:textSize="@dimen/textsize30"
            android:text="@string/setting_main"/>


    </LinearLayout>
</LinearLayout>